@@ -24,6 +24,9 @@ version 2.x.x:
 	  workspaces the "Present" option should.
 	* Add a preference to set Escape as the keyboard shortcut for closing
 	  the conversation window.
+	* Add an option in the context menu to disable smileys in the selected
+	  text in the conversation history/log viewer. This should help people who
+	  regularly paste code in conversations.
 
 	General:
 	* The configure script now dies on more absent dependencies.  The
